--- a/index.html
+++ b/index.html
@@ -51,14 +51,15 @@
                 <li class="content_list_item">Визитные карточки с ароматом</li>
                 <li class="content_list_item">Бесплатная доставка</li>
             </ul>
-            <a href="#" class="order_button">Получать раз в месяц</a>
+            <a href="#" class="order_button" id="order_button">Получать раз в месяц</a>
         </div>
-        <div class="content_wrapper">
+        <div class="content_wrapper" id="goodsBlock">
             <div class="order_text_wrapper">
                 <h3 class="order_title">Экологическая чашка для кофе с собой Joco</h3>
                 <p class="text">
                     Яркая палитра цветов и удобный размер не оставят равнодушной ни одну кофеманку. Подробнее о чашках в нашем блоге.
                 </p>
+				<a href="#" class="button_light">Заказать</a>
             </div>
             <div class="order_picture_wrapper">
                 <img src="images/coffee.jpg" alt="Coffee">
@@ -86,5 +87,6 @@
                 </li>
             </ul>
         </div>
+		<script src="js/app.js"></script>
     </body>
 </html>
