new form email news

--- a/index.html
+++ b/index.html
@@ -65,6 +65,17 @@
                 <img src="images/coffee.jpg" alt="Coffee">
             </div>
         </div>
+        <div class="form"> 
+            <h1 class="form_title">ПОДПИШИТЕСЬ И ПОЛУЧАЙТЕ НОВОСТИ ПЕРВЫМ</h1>
+            <p class="form_text">
+                В рассылке мы сообщаем о наших акциях и специальных предложениях. Вы можете получать эту информацию из первых рук.
+            </p>
+            <form class="subscribe_form" action="php/php.php" method="get">
+                <input class="form_input" type="text" name="name" placeholder="Введите email">
+                <button class="form_button" type="submit">Подписаться</button>
+                <img class="email_img" src="images/email.png" alt="email">
+            </form>
+        </div>
         <div class="bottom_menu">
             <ul class="menu">
                 <li class="menu_item">
